Support non absolute resource paths
This commit allows locating resources without the schema prefix.